kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-front-deployment
  namespace: ns-dashboard
  labels:
    app.kubernetes.io/name: dashboard-front
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: dashboard-front
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dashboard-front
    spec:
      containers:
        - name: frontend-service
          image: ghcr.io/imt-bs-digital-economics/imt-bs-digital-economics/ideal_lab_front:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 45
      imagePullSecrets:
        - name: ghcr-secret
