kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-front-svc
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    targetPort: 3000
  selector:
    app.kubernetes.io/name: dashboard-front
  type: ClusterIP
