kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  tls:
  - hosts:
      - ideal-lab.fr
    secretName: tls-secret
  rules:
  - host: ideal-lab.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashboard-front-svc
            port:
              number: 8080
